20080513
	* Added send keys feature

20080512
	* $gtkvncviewer <server> automatically connects to server
	* Removed deprecated Encoding key in .desktop file
	* Auto hide/show toolbar when in fullscreen
	* Added feature to create desktop icons pointing to a server

20080506
	* Added License file

20080412
	* Added fullscreen capability

20080411
	* Packaged mo files

20080408
	* Added internationalization support

20080407
	* Added launchpad integration, cleaned up connect dialog layout

20080322
	* Fixed bug #205257

??????????
	* First release.