@@ -5,4 +5,4 @@ gtkvncviewer - http://launchpad.net/gtkvncviewer
 
 
 * Integrate new translations
-* Add "ctrl+alt+suppr"
+
