@@ -1,3 +1,6 @@
+20080522
+	* Give focus back to the vnc widget after sent keys (Fixes: #xxxxxx)
+
 20080513
 	* Added send keys feature
 
